--- a/practicals/01-information-exercises.ipynb
+++ b/practicals/01-information-exercises.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fa046057",
+   "id": "66bc84ac",
    "metadata": {},
    "source": [
-    "Exercise 1 <br>\n",
+    "### Information  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5837c6b6",
+   "metadata": {},
+   "source": [
+    "#### Exercise 1  \n",
     "Adapt the code to generate a 1000 character long string with weights based on the previous two characters."
    ]
   },
@@ -19996,15 +20004,57 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ec0c9f7",
+   "id": "d7b23017",
+   "metadata": {},
+   "source": [
+    "#### Exercise 2 <br>\n",
+    "Explain why the log of zero is undefined."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c26d63e",
+   "metadata": {},
+   "source": [
+    "Following the rules for calculating logarithms:  \n",
+    "we cannot have the base 0 in the logarithmic function and we cannot have 0 as an argument.\n",
+    "\n",
+    "First, we can turn logarithmic into an exponential function: \n",
+    "    \n",
+    "$log_{b}$a = x  \n",
+    "a = $b^{x}$\n",
+    "\n",
+    "If we try to use 0 as the base we get the false result:  \n",
+    "$log_{0}$2 = x     \n",
+    "2 $\\neq$ $0^{x}$\n",
+    "    \n",
+    "If we use 0 as an argument we get this function:  \n",
+    "    $log_{b}0$ = x  \n",
+    "    \n",
+    "Since we know the base cannot be 0 this can never be true, thus the log of 0 is undefined.   \n",
+    "    0=$b^{x}$ \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2bc50d3",
    "metadata": {},
    "source": [
     "#### References:\n",
     " * GeeksforGeeks, (2022). random.choices() method in Python, https://www.geeksforgeeks.org/random-choices-method-in-python/  \n",
-    " * Mcloughlin, I., (2022). GitHub repository, \n",
-    "https://github.com/ianmcloughlin/2223-S1-fund-data-analysis/blob/main/notebooks/01-information.ipynb  \n",
-    " * Socratica, (2017). List Comprehension. YouTube. https://www.youtube.com/watch?v=AhSvKGTh28Q"
+    " * Mcloughlin, I., (2022). GitHub repository, https://github.com/ianmcloughlin/2223-S1-fund-data-analysis/blob/main/notebooks/01-information.ipynb    \n",
+    " * Socratica, (2017, May 7). List Comprehension. YouTube. https://www.youtube.com/watch?v=AhSvKGTh28Q\n",
+    " * Fast and Easy Maths! (2018, October 8). Why we cannot find log 0? [Video file]. YouTube. https://www.youtube.com/watch?v=j6scVL0Cp2k"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f95c1ebd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
