--- a/practicals/02-randomness-exercises.ipynb
+++ b/practicals/02-randomness-exercises.ipynb
@@ -332,6 +332,28 @@
   },
   {
    "cell_type": "markdown",
+   "id": "37d610e8",
+   "metadata": {},
+   "source": [
+    "In this case we are using formula for the **binomial coefficient**:  \n",
+    "    \n",
+    "**${n\\choose k}=\\frac{n!}{k!(n-k)!}$**  \n",
+    "\n",
+    "It refers to a number of possible ways or combinations to choose wanted number of cases k from the total n or **n choose k**.  \n",
+    "In our example we are choosing four heads (k) out of 10 coin flips (n).  \n",
+    "\n",
+    "Using the above formula with factorials we get:  \n",
+    "    \n",
+    "${10\\choose 4}=\\frac{10!}{4!(10-4)!}=\\frac{10!}{4!6!}=\\frac{10 * 9 * 8 * 7 * 6!}{4!6!}=\\frac{10 * 9 * 8 * 7}{4 * 3 * 2 * 1}=\\frac{5040}{24}$ = 210  \n",
+    "\n",
+    "That means there are 210 possible ways to choose 4 heads out of 10 coin flips.  \n",
+    "\n",
+    "We are refering only to the possible number of outcomes of getting four heads, not their order which is implied in the definition of binomial coefficient or the **combination**.  \n",
+    "Otherwise, we would be using **permutation** to find out the order of the possible outcomes.  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "950fa00a",
    "metadata": {},
    "source": [
@@ -341,11 +363,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b01ee3c",
+   "id": "88de9091",
    "metadata": {},
    "source": [
     "#### References:\n",
-    " * Mcloughlin, I., (2022). GitHub repository, https://github.com/ianmcloughlin/2223-S1-fund-data-analysis/blob/main/notebooks/02-randomness.ipynb"
+    " * Mcloughlin, I., (2022). GitHub repository, https://github.com/ianmcloughlin/2223-S1-fund-data-analysis/blob/main/notebooks/02-randomness.ipynb\n",
+    " * Weisstein, E.W., (n.d.). Binomial Coefficient, https://mathworld.wolfram.com/BinomialCoefficient.html  \n",
+    " * Mathematical Explorations (2020, August, 6). Binomial Coefficients in LaTeX [Video file]. YouTube. https://www.youtube.com/watch?v=6Zf5spwf4xc  "
    ]
   }
  ],
