--- a/practicals/01-information-exercises.ipynb
+++ b/practicals/01-information-exercises.ipynb
@@ -10,11 +10,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da32ab30",
+   "id": "e240be83",
    "metadata": {},
    "source": [
     "#### Exercise 1  \n",
-    "Adapt the code to generate a 1000 character long string with weights based on the previous two characters."
+    "_Adapt the code to generate a 1000 character long string with weights based on the previous two characters._  "
    ]
   },
   {
@@ -20012,11 +20012,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cfd26d6f",
+   "cell_type": "markdown",
+   "id": "f02bf21d",
    "metadata": {},
-   "outputs": [],
    "source": [
     "Following the rules for calculating logarithms:  \n",
     "we cannot have the base 0 in the logarithmic function and we cannot have 0 as an argument.\n",
