--- a/practicals/02-randomness-exercises.ipynb
+++ b/practicals/02-randomness-exercises.ipynb
@@ -320,19 +320,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5892508f",
+   "id": "bd7266fa",
    "metadata": {},
    "source": [
     "#### Exercise 1\n",
-    "It is somewhat interesting that (5 * 4 * 3 * 2 * 1) perfectly divides (10 * 9 * 8 * 7 * 6) - there's no remainder.\n",
+    "\n",
+    "_It is somewhat interesting that (5 * 4 * 3 * 2 * 1) perfectly divides (10 * 9 * 8 * 7 * 6) - there's no remainder.\n",
     "If we only wanted exactly four heads as opposed to five, the equivalent calculation would be (10 * 9 * 8 * 7) / (4 * 3 * 2 * 1).\n",
     "Does that evenly divide too? What is the formula in general?\n",
-    "Does it always come out as a positive whole number?"
+    "Does it always come out as a positive whole number?_"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "37d610e8",
+   "id": "6ad064d7",
    "metadata": {},
    "source": [
     "In this case we are using formula for the **binomial coefficient**:  \n",
@@ -354,22 +355,83 @@
   },
   {
    "cell_type": "markdown",
-   "id": "950fa00a",
+   "id": "3f842c0e",
    "metadata": {},
    "source": [
     "#### Exercise 2\n",
-    "Note that there are the same number of ways to get 4 tails as there to get 4 heads. Explain why this is."
+    "_Note that there are the same number of ways to get 4 tails as there to get 4 heads. Explain why this is._  "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "88de9091",
+   "id": "960fc108",
+   "metadata": {},
+   "source": [
+    "Since we are calculating how many ways or combinations there are to get 4 heads or 4 tails, it's not important how we call them,\n",
+    "doesn't matter if it's heads or tails, the equation is giving us four out of ten cycles either way."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ff831cd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "210"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# We can show it with the math.comb method\n",
+    "import math\n",
+    "# anyfour = math.comb(n, k)\n",
+    "anyfour = math.comb(10, 4)\n",
+    "anyfour"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "d722c6c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "210"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Or by importing scipy.special function\n",
+    "import scipy.special\n",
+    "# exact = True to get the integer\n",
+    "anyfour = scipy.special.comb(10, 4, exact = True)\n",
+    "anyfour"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d136a05",
    "metadata": {},
    "source": [
     "#### References:\n",
-    " * Mcloughlin, I., (2022). GitHub repository, https://github.com/ianmcloughlin/2223-S1-fund-data-analysis/blob/main/notebooks/02-randomness.ipynb\n",
-    " * Weisstein, E.W., (n.d.). Binomial Coefficient, https://mathworld.wolfram.com/BinomialCoefficient.html  \n",
-    " * Mathematical Explorations (2020, August, 6). Binomial Coefficients in LaTeX [Video file]. YouTube. https://www.youtube.com/watch?v=6Zf5spwf4xc  "
+    " * GeeksforGeeks, (2020). Python - math.comb() method, https://www.geeksforgeeks.org/python-math-comb-method/  \n",
+    " * Mathematical Explorations (2020, August, 6). Binomial Coefficients in LaTeX [Video file]. YouTube. https://www.youtube.com/watch?v=6Zf5spwf4xc  \n",
+    " * Mcloughlin, I., (2022). GitHub repository, https://github.com/ianmcloughlin/2223-S1-fund-data-analysis/blob/main/notebooks/02-randomness.ipynb   \n",
+    " * SciPy documentation. Version 1.9.3 (2022). scipy.special.comb, https://docs.scipy.org/doc/scipy/reference/generated/scipy.special.comb.html?highlight=comb    \n",
+    " * Weisstein, E.W., (n.d.). Binomial Coefficient, https://mathworld.wolfram.com/BinomialCoefficient.html    "
    ]
   }
  ],
