Creating cleansing notebook

--- a/practicals/01-information-exercises.ipynb
+++ b/practicals/01-information-exercises.ipynb
@@ -10,6 +10,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fbb90092",
+   "metadata": {},
+   "source": [
+    "_The code below was taken from I. Mcloughlin's GitHub repository and is part of the lectures for Fundamentals of Data Analysis at Atlantic Technological University. Reference at the bottom of the page._"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e240be83",
    "metadata": {},
    "source": [
@@ -20078,7 +20086,7 @@
    "toc_cell": false,
    "toc_position": {},
    "toc_section_display": true,
-   "toc_window_display": true
+   "toc_window_display": false
   }
  },
  "nbformat": 4,
