--- a/practicals/05-cleansing-exercises.ipynb
+++ b/practicals/05-cleansing-exercises.ipynb
@@ -18,6 +18,91 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "108406b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'purplealicebgooglecommonkeydishwasher'"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "#re.sub(pattern, repl, string, count=0, flags=0)\n",
+    "\n",
+    "example = 'purple alice-b@google.com monkey dishwasher'\n",
+    "#\\W = '[^a-zA-Z0-9_]' \n",
+    "pattern = r'\\W+'\n",
+    "result = re.sub(pattern, '', example, count=0, flags=0)\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef742cb6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5e2952b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6ec45354",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1e8cd847",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d7c0650",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "03f3acfe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2016ff74",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "e06e5b26",
    "metadata": {},
@@ -27,12 +112,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c14f6756",
+   "cell_type": "markdown",
+   "id": "25014ce0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### References:\n",
+    "Mcloughlin, I., (2022). GitHub repository, https://github.com/ianmcloughlin/2223-S1-fund-data-analysis/blob/main/notebooks/05-cleansing.ipynb  \n",
+    "Python Documentation (2022). re — Regular expression operations. Version 3.11.1, Retrieved December 18, 2022 from https://docs.python.org/3/library/re.html   "
+   ]
   }
  ],
  "metadata": {
