Normal distribution definition

--- a/normal-distribution.ipynb
+++ b/normal-distribution.ipynb
@@ -53,6 +53,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f5e5c389",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7dde7dfb",
+   "metadata": {},
+   "source": [
+    "### Introduction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5f51955d",
+   "metadata": {},
+   "source": [
+    "### Definition"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6a65a0e9",
+   "metadata": {},
+   "source": [
+    "Normal distribution also known as Gaussian or bell-curved distribution is a type of continuous probability distribution for independent random variables [1](https://en.wikipedia.org/w/index.php?title=Normal_distribution&oldid=1129344614). \n",
+    "Being a continuous distribution means that the values of variables can fall anywhere in its range unlike the discrete distribution with limited or finite outcomes. It is a symmetrically shaped distribution with most of its values gathering around its centre. It commonly occurs in nature and therefore represents a very important concept in inferential statistics for analysing and predicting properties of the population. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b83b9a81",
+   "metadata": {},
+   "source": [
+    "### Formula"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "00e5ef07",
    "metadata": {},
@@ -71,10 +112,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43a8bccd",
+   "id": "10a34395",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7594e5af",
+   "metadata": {},
+   "source": [
+    "### Parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db6cf939",
+   "metadata": {},
+   "source": [
+    "### Plots"
+   ]
   },
   {
    "cell_type": "code",
@@ -103,7 +160,86 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ff82a52",
+   "id": "3f04bc4d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a34db25",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19528055",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e52d5378",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fa9cf7c0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a23d777",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e743c997",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3f74a02",
+   "metadata": {},
+   "source": [
+    "Explore:  \n",
+    " * Measures of Central Tendency  \n",
+    " * pdf and cdf  \n",
+    " * parameters  \n",
+    " * empirical rule  \n",
+    " * maximum entropy distribution?\n",
+    " * z-values\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9058f88f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ea1847be",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -321,25 +457,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0d86674d",
+   "id": "f22937d4",
    "metadata": {},
    "source": [
-    "#### References:\n",
-    " * Mcloughlin, I., (2022). GitHub repository, https://github.com/ianmcloughlin/2223-S1-fund-data-analysis/blob/main/notebooks/04-outliers.ipynb  "
+    "### References:\n",
+    " * Mcloughlin, I., (2022). GitHub repository, https://github.com/ianmcloughlin/2223-S1-fund-data-analysis/blob/main/notebooks/04-outliers.ipynb  \n",
+    " * Wikipedia contributors. (2022, December 24). Normal distribution. In Wikipedia, The Free Encyclopedia. Retreived December 26, 2022 from https://en.wikipedia.org/w/index.php?title=Normal_distribution&oldid=1129344614  \n",
+    " "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ebf3524f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84a9ea25",
+   "id": "a1182b21",
    "metadata": {},
    "outputs": [],
    "source": []
