Probability density function

--- a/normal-distribution.ipynb
+++ b/normal-distribution.ipynb
@@ -53,14 +53,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5e5c389",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "7dde7dfb",
    "metadata": {},
@@ -78,11 +70,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6a65a0e9",
+   "id": "9d9026cb",
    "metadata": {},
    "source": [
     "Normal distribution also known as Gaussian or bell-curved distribution is a type of continuous probability distribution for independent random variables [1](https://en.wikipedia.org/w/index.php?title=Normal_distribution&oldid=1129344614). \n",
-    "Being a continuous distribution means that the values of variables can fall anywhere in its range unlike the discrete distribution with limited or finite outcomes. It is a symmetrically shaped distribution with most of its values gathering around its centre. It commonly occurs in nature and therefore represents a very important concept in inferential statistics for analysing and predicting properties of the population. "
+    "Being a continuous distribution means that the values of variables can fall anywhere in its range unlike the discrete distribution with limited or finite outcomes. It is a symmetrically shaped distribution with most of its values gathering around the centre. It commonly occurs in nature and therefore represents a very important concept in inferential statistics for analysing and predicting properties of the population. "
    ]
   },
   {
@@ -95,31 +87,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "00e5ef07",
+   "id": "7721399f",
    "metadata": {},
    "source": [
-    "Probability density function "
+    "Probability density function for a normal distribution is:"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "704ef334",
+   "id": "5badb180",
    "metadata": {},
    "source": [
-    "$$\\frac{1}{\\sqrt{2 \\pi \\sigma^2}} e^{-\\frac{(x-\\mu)^2}{2 \\sigma^2}}$$"
+    "$$ p(x) = \\frac{1}{\\sqrt{2 \\pi \\sigma^2}} e^{-\\frac{(x-\\mu)^2}{2 \\sigma^2}}$$"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "10a34395",
+   "cell_type": "markdown",
+   "id": "dc784cb9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "x - random variable  \n",
+    "$\\pi$ = 3.14159  \n",
+    "e = 2.71828  \n",
+    "$\\mu$ - mean  \n",
+    "$\\sigma$ - standard deviation  \n",
+    "$\\sigma^2$ - variance"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "7594e5af",
+   "id": "d49a318a",
    "metadata": {},
    "source": [
     "### Parameters"
@@ -127,27 +124,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db6cf939",
+   "id": "3acd48ee",
    "metadata": {},
    "source": [
+    "\n",
     "### Plots"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ae010e6f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bbe3f1f9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
