--- a/normal-distribution.ipynb
+++ b/normal-distribution.ipynb
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc784cb9",
+   "id": "f6353d93",
    "metadata": {},
    "source": [
     "x - random variable  \n",
@@ -124,8 +124,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3acd48ee",
+   "id": "54777c7d",
    "metadata": {},
+   "source": [
+    "The main parameters of the normal distribution are the **mean** ($\\mu$) representing the average and the **standard deviation** ($\\sigma$) representing the measure of dispersion of data around the mean. The higher the standard deviation the wider the distribution. [2](https://en.wikipedia.org/wiki/Standard_deviation). While the $\\mu$ and $\\sigma$ are the parameters of the population, the standard deviation of a sample is represented with s and the mean with $\\overline x$. Standard deviation is a square root of the variance $\\sigma^2$.    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c5a5cf1",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "\n",
     "### Plots"
@@ -439,13 +449,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f22937d4",
+   "id": "3264a55e",
    "metadata": {},
    "source": [
     "### References:\n",
     " * Mcloughlin, I., (2022). GitHub repository, https://github.com/ianmcloughlin/2223-S1-fund-data-analysis/blob/main/notebooks/04-outliers.ipynb  \n",
     " * Wikipedia contributors. (2022, December 24). Normal distribution. In Wikipedia, The Free Encyclopedia. Retreived December 26, 2022 from https://en.wikipedia.org/w/index.php?title=Normal_distribution&oldid=1129344614  \n",
-    " "
+    " * Wikipedia contributors. (2022, November 9). Standard deviation. In Wikipedia, The Free Encyclopedia. Retrieved December 27, 2022 from https://en.wikipedia.org/w/index.php?title=Standard_deviation&oldid=1120954441  "
    ]
   },
   {
