Standard deviation and standard error

--- a/normal-distribution.ipynb
+++ b/normal-distribution.ipynb
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d49a318a",
+   "id": "d6561645",
    "metadata": {},
    "source": [
     "### Parameters"
@@ -255,12 +255,21 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ea1847be",
+   "cell_type": "markdown",
+   "id": "c417ea4c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "#### Standard deviation and the standard error"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "224ecc63",
+   "metadata": {},
+   "source": [
+    "It is worth noting the distinction between the standard deviation (SD) and the standard error (SE). While both represent the measure of variability, the standard deviation shows how far are the values from the sample mean and the standard error shows the variability between multiple samples and their means. If the standard error is high the sample means are further from the population mean and if the standard error is small, the sample means are good estimator of the population mean [3](https://statisticsbyjim.com/basics/difference-standard-deviation-vs-standard-error/). The distribution to show the standard error is called the sampling distribution. \n",
+    "\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -304,11 +313,13 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d3f74a02",
+   "id": "72eedbdd",
    "metadata": {},
    "source": [
     "Explore:  \n",
     " * Measures of Central Tendency  \n",
+    " * Skewness \n",
+    " * Kurtosis\n",
     " * pdf and cdf  \n",
     " * parameters  \n",
     " * empirical rule  \n",
@@ -319,7 +330,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b19bac31",
+   "id": "2538cd6b",
    "metadata": {},
    "source": [
     "### References:\n",
@@ -327,8 +338,16 @@
     " * Wikipedia contributors. (2022, December 24). Normal distribution. In Wikipedia, The Free Encyclopedia. Retreived December 26, 2022 from https://en.wikipedia.org/w/index.php?title=Normal_distribution&oldid=1129344614  \n",
     " * Wikipedia contributors. (2022, November 9). Standard deviation. In Wikipedia, The Free Encyclopedia. Retrieved December 27, 2022 from https://en.wikipedia.org/w/index.php?title=Standard_deviation&oldid=1120954441  \n",
     " * https://numpy.org/doc/stable/reference/random/generated/numpy.random.normal.html  \n",
-    " * "
+    " * https://statisticsbyjim.com/basics/difference-standard-deviation-vs-standard-error/  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6b68bf7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
