Another way of writing the formula

--- a/normal-distribution.ipynb
+++ b/normal-distribution.ipynb
@@ -80,23 +80,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b83b9a81",
+   "id": "1fd9a984",
    "metadata": {},
    "source": [
-    "### Formula"
+    "**Probability density function** for the normal distribution is:"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7721399f",
-   "metadata": {},
-   "source": [
-    "Probability density function for a normal distribution is:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "5badb180",
+   "id": "15e8f65c",
    "metadata": {},
    "source": [
     "$$ p(x) = \\frac{1}{\\sqrt{2 \\pi \\sigma^2}} e^{-\\frac{(x-\\mu)^2}{2 \\sigma^2}}$$"
@@ -256,25 +248,68 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c417ea4c",
+   "id": "f98cbd27",
    "metadata": {},
    "source": [
-    "#### Standard deviation and the standard error"
+    "#### Standard Deviation and Standard Error\n",
+    "\n",
+    "It is worth noting the distinction between the standard deviation (SD) and the standard error (SE). While both represent the measure of variability, the standard deviation shows how far are the values from the sample mean and the standard error shows the variability between multiple samples and their means. If the standard error is high the sample means are further from the population mean and if the standard error is small, the sample means are good estimator of the population mean [3](https://statisticsbyjim.com/basics/difference-standard-deviation-vs-standard-error/). The distribution to show the standard error is called the sampling distribution. \n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "224ecc63",
+   "id": "23051b61",
    "metadata": {},
    "source": [
-    "It is worth noting the distinction between the standard deviation (SD) and the standard error (SE). While both represent the measure of variability, the standard deviation shows how far are the values from the sample mean and the standard error shows the variability between multiple samples and their means. If the standard error is high the sample means are further from the population mean and if the standard error is small, the sample means are good estimator of the population mean [3](https://statisticsbyjim.com/basics/difference-standard-deviation-vs-standard-error/). The distribution to show the standard error is called the sampling distribution. \n",
+    "#### Another way of writing the formula: "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3aa6e6e3",
+   "metadata": {},
+   "source": [
+    "_The formula was taken from Khan, S., reference at the bottom of the notebook_ [4](https://www.khanacademy.org/math/statistics-probability/modeling-distributions-of-data/more-on-normal-distributions/v/introduction-to-the-normal-distribution)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2aa88310",
+   "metadata": {},
+   "source": [
+    "$ p(x) = \\frac{1}{\\sqrt{2 \\pi \\sigma^2}} e^{-\\frac{(x-\\mu)^2}{2 \\sigma^2}}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78f3769a",
+   "metadata": {},
+   "source": [
+    "$p(x) = \\frac{1}{\\sqrt{2 \\pi \\sigma^2}} e^{-\\frac{1}{2} (\\frac {x-\\mu}{\\sigma})^2}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79ffd66a",
+   "metadata": {},
+   "source": [
+    "$p(x) = \\frac{1}{\\sqrt{2 \\pi \\sigma^2}} (e^{(\\frac {x-\\mu}{\\sigma})^2}) ^ {-\\frac{1}{2}}$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27a55fa0",
+   "metadata": {},
+   "source": [
+    "$p(x) = \\frac{1}{\\sqrt{2\\pi \\sigma^2} {e^{z}}^2}$\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c3e13b9c",
+   "id": "23a874f8",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -282,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "da328f07",
+   "id": "f89e697e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -290,7 +325,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b44ceceb",
+   "id": "34e6df02",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -298,7 +333,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "324c672b",
+   "id": "f5fc2f9c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "045aa226",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee4e02aa",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -313,11 +364,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "72eedbdd",
+   "id": "ffbcd83a",
    "metadata": {},
    "source": [
     "Explore:  \n",
     " * Measures of Central Tendency  \n",
+    " * Central Limit Theorem\n",
     " * Skewness \n",
     " * Kurtosis\n",
     " * pdf and cdf  \n",
@@ -330,7 +382,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2538cd6b",
+   "id": "e6e456f2",
    "metadata": {},
    "source": [
     "### References:\n",
@@ -338,7 +390,9 @@
     " * Wikipedia contributors. (2022, December 24). Normal distribution. In Wikipedia, The Free Encyclopedia. Retreived December 26, 2022 from https://en.wikipedia.org/w/index.php?title=Normal_distribution&oldid=1129344614  \n",
     " * Wikipedia contributors. (2022, November 9). Standard deviation. In Wikipedia, The Free Encyclopedia. Retrieved December 27, 2022 from https://en.wikipedia.org/w/index.php?title=Standard_deviation&oldid=1120954441  \n",
     " * https://numpy.org/doc/stable/reference/random/generated/numpy.random.normal.html  \n",
-    " * https://statisticsbyjim.com/basics/difference-standard-deviation-vs-standard-error/  "
+    " * https://statisticsbyjim.com/basics/difference-standard-deviation-vs-standard-error/  \n",
+    " * Khan, S. (n.d.). Deep definition of the normal distribution. Khan Academy, Retrieved December 30, 2022 from https://www.khanacademy.org/math/statistics-probability/modeling-distributions-of-data/more-on-normal-distributions/v/introduction-to-the-normal-distribution  \n",
+    "    "
    ]
   },
   {
