--- a/normal-distribution.ipynb
+++ b/normal-distribution.ipynb
@@ -29,6 +29,7 @@
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "from scipy import stats\n",
     "import seaborn as sns"
    ]
   },
@@ -116,9 +117,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "906cabc6",
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "257cb0d1",
    "metadata": {},
+   "outputs": [],
    "source": [
     "The main parameters of the normal distribution are the **mean** ($\\mu$) representing the average and the **standard deviation** ($\\sigma$) representing the measure of dispersion of data around the mean. The higher the standard deviation the wider the distribution. [2](https://en.wikipedia.org/wiki/Standard_deviation). While the $\\mu$ and $\\sigma$ are the parameters of the population, the standard deviation of a sample is represented with s and the mean with $\\overline x$. Standard deviation is a square root of the variance $\\sigma^2$.    "
    ]
@@ -291,7 +294,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79ffd66a",
+   "id": "a1abf78a",
    "metadata": {},
    "source": [
     "$p(x) = \\frac{1}{\\sqrt{2 \\pi \\sigma^2}} (e^{(\\frac {x-\\mu}{\\sigma})^2}) ^ {-\\frac{1}{2}}$"
@@ -299,36 +302,60 @@
   },
   {
    "cell_type": "markdown",
-   "id": "27a55fa0",
+   "id": "55ebba41",
    "metadata": {},
    "source": [
-    "$p(x) = \\frac{1}{\\sqrt{2\\pi \\sigma^2} {e^{z}}^2}$\n",
+    "$p(x) = \\frac{1}{\\sqrt{{2\\pi \\sigma^2} {e^{z}}^2}}$\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eae42a21",
+   "metadata": {},
+   "source": [
+    "#### z-score "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "607e7e3d",
+   "metadata": {},
+   "source": [
+    "Writing the formula this way gives a clearer picture of its elements. In this case _z_ represents the number of standard deviations the value is away from the mean. _z-scores_ are also called the _standard scores_ or the _z-values_. The formula is:    \n",
+    " \n",
+    "$$z = \\frac {x-\\mu}{\\sigma}$$  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbdf03f1",
+   "metadata": {},
+   "source": [
+    "where $x-\\mu$ represents the distance between the given datapoint and the mean dividing it by standard deviation $\\sigma$. In case of a sample the formula is:  \n",
+    "    \n",
+    "$$ z = \\frac {x-\\overline x}{s} $$  \n",
+    "\n",
+    "_x_ is the value or the datapoint we are interested in, $\\overline x$ is the mean of the sample and s is the standard deviation.[4](https://en.wikipedia.org/wiki/Standard_score)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23a874f8",
+   "id": "4ce77159",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f89e697e",
+   "execution_count": 1,
+   "id": "bdfa2205",
    "metadata": {},
    "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "34e6df02",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# z-score for multiple samples - write the formula"
+   ]
   },
   {
    "cell_type": "code",
@@ -382,7 +409,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6e456f2",
+   "id": "d81decef",
    "metadata": {},
    "source": [
     "### References:\n",
@@ -392,6 +419,7 @@
     " * https://numpy.org/doc/stable/reference/random/generated/numpy.random.normal.html  \n",
     " * https://statisticsbyjim.com/basics/difference-standard-deviation-vs-standard-error/  \n",
     " * Khan, S. (n.d.). Deep definition of the normal distribution. Khan Academy, Retrieved December 30, 2022 from https://www.khanacademy.org/math/statistics-probability/modeling-distributions-of-data/more-on-normal-distributions/v/introduction-to-the-normal-distribution  \n",
+    " * Wikipedia contributors. (2022, December 19). Standard score. In Wikipedia, The Free Encyclopedia. Retrieved January 2, 2023 from https://en.wikipedia.org/w/index.php?title=Standard_score&oldid=1128321544  \n",
     "    "
    ]
   },
