z-score for multiple samples

--- a/normal-distribution.ipynb
+++ b/normal-distribution.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23051b61",
+   "id": "871e639f",
    "metadata": {},
    "source": [
     "#### Another way of writing the formula: "
@@ -278,7 +278,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2aa88310",
+   "id": "ad74a17c",
    "metadata": {},
    "source": [
     "$ p(x) = \\frac{1}{\\sqrt{2 \\pi \\sigma^2}} e^{-\\frac{(x-\\mu)^2}{2 \\sigma^2}}$"
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eae42a21",
+   "id": "969ced95",
    "metadata": {},
    "source": [
     "#### z-score "
@@ -319,12 +319,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "607e7e3d",
+   "id": "223bc0b6",
    "metadata": {},
    "source": [
     "Writing the formula this way gives a clearer picture of its elements. In this case _z_ represents the number of standard deviations the value is away from the mean. _z-scores_ are also called the _standard scores_ or the _z-values_. The formula is:    \n",
     " \n",
-    "$$z = \\frac {x-\\mu}{\\sigma}$$  "
+    "$$z = \\frac {x-\\mu}{\\sigma}$$"
    ]
   },
   {
@@ -340,35 +340,31 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4ce77159",
+   "cell_type": "markdown",
+   "id": "89317c4a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "With multiple samples we are checking how many standard errors are the sample means from the population mean. The formula for standard error is:  \n",
+    "    \n",
+    "$$ SE = \\frac {\\sigma}{\\sqrt {n}} $$\n",
+    "\n",
+    "while the formula for z-scores for multiple samples is:  \n",
+    "    \n",
+    " $$ z = \\frac {x-\\mu}{{\\sigma} /{\\sqrt {n}}} $$"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "bdfa2205",
+   "cell_type": "markdown",
+   "id": "4e3c7cd9",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# z-score for multiple samples - write the formula"
+    "It is worth noting that if we have more samples (n) the standard deviation will get smaller, if we have less samples the standard deviation will get larger."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "id": "f5fc2f9c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "045aa226",
    "metadata": {},
    "outputs": [],
    "source": []
