--- a/practicals/02-randomness-exercises.ipynb
+++ b/practicals/02-randomness-exercises.ipynb
@@ -1311,11 +1311,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "473438b4",
+   "cell_type": "markdown",
+   "id": "dc08ddfb",
    "metadata": {},
-   "outputs": [],
    "source": [
     "#### References:\n",
     " * GeeksforGeeks (2020). Python - math.comb() method, Retrieved December 5, 2022 from https://www.geeksforgeeks.org/python-math-comb-method/  \n",
@@ -1331,8 +1329,7 @@
     " * SciPy documentation (2022). scipy.special.comb, Version 1.9.3., Retrieved December 5, 2022 from https://docs.scipy.org/doc/scipy/reference/generated/scipy.special.comb.html?highlight=comb  \n",
     " * Weisstein, E.W., (n.d.). Binomial Coefficient, Retrieved December 5, 2022 from https://mathworld.wolfram.com/BinomialCoefficient.html   \n",
     " * Wikipedia contributors (2022, November 17). Poisson distribution. In Wikipedia, The Free Encyclopedia. Retrieved December 5, 2022 from https://en.wikipedia.org/w/index.php?title=Poisson_distribution&oldid=1122449882  \n",
-    " * Wikipedia contributors. (2022, November 17). Chi-squared distribution. In Wikipedia, The Free Encyclopedia. Retrieved December 6, 2022, from https://en.wikipedia.org/w/index.php?title=Chi-squared_distribution&oldid=1122473820  \n",
-    "\n"
+    " * Wikipedia contributors. (2022, November 17). Chi-squared distribution. In Wikipedia, The Free Encyclopedia. Retrieved December 6, 2022, from https://en.wikipedia.org/w/index.php?title=Chi-squared_distribution&oldid=1122473820  "
    ]
   }
  ],
