--- a/normal-distribution.ipynb
+++ b/normal-distribution.ipynb
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60bd9fce",
+   "id": "95f622fd",
    "metadata": {},
    "source": [
     "$ p(x) = \\frac{1}{\\sqrt{2 \\pi \\sigma^2}} (e^{(\\frac {x-\\mu}{\\sigma})^2}) ^ {-\\frac{1}{2}}$"
@@ -475,12 +475,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b256bb8",
+   "id": "5636a84f",
    "metadata": {},
    "source": [
     "The measure of central tendency represents the centre or the typical value of the probability distribution. Arithmetic mean, median and mode are the main measures of central tendency. Besides these, there are other measures like generalized mean, geometric mean, harmonic mean, weighted arithmetic mean, geometric median etc [5](https://en.wikipedia.org/wiki/Central_tendency).  We are going to focus on the three main measures.  \n",
     "\n",
-    "The **mean** represents the average of values we get by calculating their sum dividing it by the number of values:  \n",
+    "**Mean** represents the average of values we get by calculating their sum dividing it by the number of values:  \n",
     "\n",
     "$$\\bar{x} = \\frac {\\Sigma X_{i}}{n}$$  \n",
     "or:"
@@ -495,9 +495,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "adb6a352",
+   "metadata": {},
+   "source": [
+    "**Median** represents the middle value of the set of values. Depending on the total number of values, median will be either the middle number if the number of the total values is odd or the average of two middle numbers if the total of values is even. [6](https://www.w3schools.com/python/ref_stat_median.asp). Before calculating the median, the values are sorted in ascending order. Below is the median formula for odd and even values [7](https://www.sqlservercentral.com/articles/mean-median-mode-using-sql-and-dax).  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f5dfc2ed",
+   "metadata": {},
+   "source": [
+    "_Even n_:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0f5d5a03",
+   "metadata": {},
+   "source": [
+    "$$Median = \\left(\\frac{n+1}{2}\\right)^{th} \\space observation$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d6ff6bde",
+   "metadata": {},
+   "source": [
+    "_Odd n_:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d14e4e06",
+   "metadata": {},
+   "source": [
+    "$$Median = \\frac {\\left(\\frac {n}{2}\\right)^{th} + \\left( \\frac{n}{2} + 1 \\right) ^{th} \\space observation}{2}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1d74ee29",
+   "metadata": {},
+   "source": [
+    "**Mode** is the most frequent value appearing in the data set. Data set can have one mode, two modes or more. After ordering the values we check how many times each of the values appear. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b5500ef",
+   "metadata": {},
+   "source": [
+    "Depending on the type of variable we should consider using different central tendency measures.  Mode is suitable for nominal variables, median is good for ordinal variables and skewed distributions and mean for normal, continuous distributions. [8](https://statistics.laerd.com/statistical-guides/measures-central-tendency-mean-mode-median.php). "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee673c35",
+   "id": "cf4a2cbf",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -505,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bca2c4e0",
+   "id": "0481c3e3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -513,7 +569,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "733923ed",
+   "id": "fce9a46e",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -521,7 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c0a6b2e",
+   "id": "d707d204",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -529,7 +585,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "731696ef",
+   "id": "cc5c4f1c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -745,9 +801,7 @@
    "id": "30a79f22",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "$[ \\overset{i=n}{\\underset{i=1}{text}}]$"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -776,11 +830,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "83456136",
+   "cell_type": "markdown",
+   "id": "190dae96",
    "metadata": {},
-   "outputs": [],
    "source": [
     "### References:\n",
     " * Mcloughlin, I., (2022). GitHub repository, https://github.com/ianmcloughlin/2223-S1-fund-data-analysis/blob/main/notebooks/04-outliers.ipynb  \n",
@@ -793,6 +845,9 @@
     " * https://stackoverflow.com/questions/12608788/changing-the-tick-frequency-on-the-x-or-y-axis  \n",
     " * https://stackoverflow.com/questions/11244514/modify-tick-label-text   \n",
     " * https://en.wikipedia.org/wiki/Central_tendency  \n",
+    " * https://www.w3schools.com/python/ref_stat_median.asp \n",
+    " * https://statistics.laerd.com/statistical-guides/measures-central-tendency-mean-mode-median.php  \n",
+    " * \n",
     "    "
    ]
   },
